objects/test_fields__c.object
<CustomObject>
    <label>test fields</label>
    <nameField>
        <label>test fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>test fieldss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>url__c</fullName>
        <label>url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>To Check Date</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <label>text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>time__c</fullName>
        <label>time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>To Check Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Geoloc__c</fullName>
        <label>Geoloc</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckBox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Usage Of Checkbox</description>
        <label>CheckBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>The usage of currency</description>
        <label>Currency</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CELL</fullName>
                </value>
                <value>
                    <fullName>MOBILE</fullName>
                </value>
                <value>
                    <fullName>LAND</fullName>
                </value>
                <value>
                    <fullName>TELEPHONE</fullName>
                </value>
                <value>
                    <fullName>WILL PHONE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <description>To Check Date and Time</description>
        <label>Date&amp;Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>text_area__c</fullName>
        <label>text area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>picklist_multi__c</fullName>
        <label>picklist multi</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>text_area_long__c</fullName>
        <label>text area long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>text_area_rich__c</fullName>
        <label>text area rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>text_encrypted__c</fullName>
        <label>text encrypted</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
</CustomObject>